feat: add custom checkbox

--- a/src/common/ui/_colors.scss
+++ b/src/common/ui/_colors.scss
@@ -2,4 +2,9 @@ $primary: #2f80ed;
 $danger: #eb5757;
 
 $gray-1: #a9a9a9;
+$gray-3: #828282;
 $gray-4: #bdbdbd;
+
+$black-1: #333333;
+
+$white: #ffffff;
