--- a/src/common/ui/index.scss
+++ b/src/common/ui/index.scss
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Raleway:wght@400;700&display=swap");
 
-* {
+*,
+*:before,
+*:after {
   box-sizing: border-box;
 }
 
