--- a/src/app/App.module.scss
+++ b/src/app/App.module.scss
@@ -1,9 +1,39 @@
-@use "../common/ui/colors";
+@use "../common/ui/assets/colors";
+
+.taskList {
+  width: 100%;
+
+  .deleteBtn {
+    outline: none;
+    border: none;
+    border-radius: 4px;
+    padding: 12px 28px;
+    background-color: colors.$danger;
+    display: block;
+    margin-left: auto;
+    cursor: pointer;
+
+    span {
+      color: colors.$white;
+      font-family: "Montserrat", sans-serif;
+      font-size: 12px;
+      font-weight: 600;
+      display: flex;
+      align-items: center;
+
+      svg {
+        fill: colors.$white;
+        width: 18px;
+      }
+    }
+  }
+}
 
 .nav {
   width: 100%;
   border-bottom: 1px solid colors.$gray-4;
   margin-bottom: 18px;
+  font-family: "Montserrat", sans-serif;
 
   ul {
     display: flex;
